# kaelo-hw-alert

./: .coverage  .gitignore  README-ENHANCED.md  README-TEST.md  README.md  hardware_controller.py  logger_config.py  main.py  models.py  pyproject.toml  pytest.ini  requirements.txt  setup.sh  systemd_service.py
hardware/: mock.py
tests/: test_hardware_controller.py
